for Node.js v0.8: change byline version in package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "express": "~3.4.0",
     "component": "~0.17.6",
-    "byline": "~3.1.2",
+    "byline": ">=2.1.0 <3.0.0",
     "batch": "~0.5.0"
   },
   "devDependencies": {}
